--- a/Dockerfile.33
+++ b/Dockerfile.33
@@ -13,6 +13,7 @@ RUN apt-get install -y mercurial
 RUN apt-get install -y vim
 RUN apt-get install -y bc
 RUN apt-get install -y u-boot-tools
+RUN apt-get install -y device-tree-compiler
 
 RUN mkdir /var/run/sshd
 
