change ubuntu to ubuntu:12.04.5

--- a/Dockerfile.1404
+++ b/Dockerfile.1404
@@ -1,4 +1,4 @@
-FROM	ubuntu:12.04.5
+FROM	ubuntu
 MAINTAINER	BF 	"https://github.com/androidbftab1"
 
 RUN apt-get update
@@ -14,6 +14,7 @@ RUN apt-get install -y vim
 RUN apt-get install -y bc
 RUN apt-get install -y u-boot-tools
 RUN apt-get install -y device-tree-compiler
+
 
 RUN mkdir /var/run/sshd
 
